Cuadros de texto solo para números

--- a/LaboratorioEJB-war/web/index.html
+++ b/LaboratorioEJB-war/web/index.html
@@ -14,9 +14,9 @@ and open the template in the editor.
         <h1>Calculadora</h1>
         <form action="./CalcServlet" method="POST">
             Digite el primer número<br>
-            <input type="text" name="val1"/><br>
+            <input type="number" name="val1"/><br>
             Digite el segundo número<br>
-            <input type="text" name="val2"/><br>
+            <input type="number" name="val2"/><br>
             
             Seleccione la operación<br>
             <input type="submit" value="+" name="operacion"/>
